Make sure invisible related displays that are stacked under other objects always float to the top mouse event wise.

--- a/web/resources/css/screen.css
+++ b/web/resources/css/screen.css
@@ -21,6 +21,9 @@
 .ActiveRectangle {
     pointer-events: none;
 }
+.RelatedDisplay.invisible {
+    z-index: 2;
+}
 .RelatedDisplay,
 .anchor-li {
     cursor: pointer;
